2013-02-07  Alan Modra  <amodra@gmail.com>

	PR target/53040
	* config/rs6000/rs6000.c (rs6000_savres_strategy): When using
	static chain, set REST_INLINE_FPRS too.

2013-02-06  David Edelsohn  <dje.gcc@gmail.com>

	Backport from mainline
	2013-01-25  Michael Haubenwallner  <michael.haubenwallner@salomon.at>

	* configure.ac (gcc_cv_ld_static_dynamic): Define for AIX native ld.
	* configure: Regenerate.

2013-02-05  David Edelsohn  <dje.gcc@gmail.com>

	Backport from mainline
	2013-02-03  David Edelsohn  <dje.gcc@gmail.com>
		    Andrew Dixie  <andrewd@gentrack.com>

	* collect2.c (GCC_CHECK_HDR): Do not scan objects with F_LOADONLY
	flag set.

2013-02-05  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2012-12-10  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/55107
	* tree-ssa-pre.c (struct pre_stats): Remove constified field.
	(bitmap_set_replace_value): Add gcc_unreachable.
	(do_regular_insertion): Re-write all_same handling.  Insert
	an assignment instead of a PHI in this case.
	(execute_pre): Do not record constified events.

2013-02-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/54767
	* tree-vrp.c (vrp_visit_phi_node): For PHI arguments coming via
	backedges drop all symbolical range information.
	(execute_vrp): Compute backedges.

2013-02-04  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2012-01-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44061
	* tree-vrp.c (extract_range_basic): Compute zero as
	value-range for __builtin_constant_p of function parameters.

	2013-01-08  Jakub Jelinek  <jakub@redhat.com>
 
	PR middle-end/55890
	* tree-ssa-ccp.c (evaluate_stmt): Use gimple_call_builtin_class_p.

2013-02-04  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2012-07-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/53844
	* tree-ssa-dse.c (dse_possible_dead_store_p): Properly handle
	the loop virtual PHI.

	2012-12-13  Richard Biener  <rguenther@suse.de>
